apps/docs/v0.2.17/advanced/fragments.mdx
---
title: "Advanced fragments"
description: "Build reusable workflow fragments, global base caches, and wrapper fragments that preserve context contracts."
noindex: true
---

<Note>
**Read this when:** you're sharing setup across multiple projects or repos, or
you want expensive base setup cached once on the machine and reused everywhere.
If you have one project with a single config, you can skip this page.
</Note>

A fragment is a reusable workflow node. There is no separate fragment API:
sequences, tasks, and composed nodes are already fragments when you export or
return them from a helper.

Fragments are useful when many workflows share setup:

- installing operating system packages;
- installing Node, Bun, Codex, Claude, or GitHub CLI;
- authenticating CLIs;
- warming package stores;
- creating base VM snapshots;
- applying organization checks around repo-specific setup.

## Start with a simple reusable sequence

```ts
import { sequence } from "@rigkit/sdk";

export const baseDependencies = sequence("base-dependencies")
  .configure({
    node: "22.11.0",
    packageManager: "pnpm@9.15.9",
    osImage: "ubuntu-24.04",
  })
  .task("resolve-toolchain", async ({ config }) => {
    return {
      ctx: {
        toolchain: {
          node: String(config.node),
          packageManager: String(config.packageManager),
          osImage: String(config.osImage),
        },
      },
    };
  })
  .task("warm-package-store", async ({ config, step }) => {
    const packageStoreKey = [
      "package-store",
      String(config.osImage),
      String(config.node),
      String(config.packageManager),
    ].join(":");

    return {
      ctx: {
        ...step.ctx,
        packageStoreKey,
      },
    };
  });
```

Use it from a workflow:

```ts
export default sequence("api")
  .add(baseDependencies)
  .task("install-api", async ({ step }) => ({
    ctx: {
      ...step.ctx,
      service: {
        packageName: "@acme/api",
      },
    },
  }));
```

The fragment output becomes the next task's input.

## Make expensive fragments global

Call `.global()` when the same fragment should be cached outside the local
workflow state:

```ts
export default sequence("api")
  .add(baseDependencies.global())
  .task("install-api", async ({ step }) => ({
    ctx: {
      ...step.ctx,
      service: {
        packageName: "@acme/api",
      },
    },
  }));
```

Global fragment cache is keyed by the fragment graph and Rigkit definition
fingerprint. Provider config changes do not move the fragment state path; they
invalidate cached tasks inside the fragment where that provider is in scope.

Use `.global()` for shared bases. Use `.local()` when a subtree should return
to project-local cache.

## Parameterize with factories

Most fragments should be factories, not one-off exported values. Factories keep
call sites clear and make cache-affecting config explicit.

```ts
import {
  sequence,
  type WorkflowNodeOutput,
  type WorkflowProviderMap,
} from "@rigkit/sdk";
import { baseDependencies } from "./base-dependencies";

type BaseContext = WorkflowNodeOutput<typeof baseDependencies>;

type ServiceOptions = {
  id: string;
  packageName: string;
  sourceDir: string;
  devCommand: string;
};

export function serviceWorkflow(options: ServiceOptions) {
  const serviceSetup = sequence<WorkflowProviderMap, BaseContext>(
    `${options.id}-setup`,
  )
    .configure({
      packageName: options.packageName,
      sourceDir: options.sourceDir,
      devCommand: options.devCommand,
    })
    .task("install-service", async ({ config, step }) => ({
      ctx: {
        ...step.ctx,
        service: {
          id: options.id,
          packageName: String(config.packageName),
          sourceDir: String(config.sourceDir),
          devCommand: String(config.devCommand),
        },
      },
    }));

  return sequence(options.id)
    .add(baseDependencies.global())
    .add(serviceSetup);
}
```

Use the factory from named configs:

```ts
export default serviceWorkflow({
  id: "api",
  packageName: "@acme/api",
  sourceDir: "services/api",
  devCommand: "pnpm --filter @acme/api dev",
});
```

## Preserve context deliberately

When a fragment receives input context and adds fields, return the previous
context plus new values:

```ts
.task("prepare-project", async ({ step }) => {
  return {
    ctx: {
      ...step.ctx,
      project: {
        path: "/workspace/app",
      },
    },
  };
});
```

Dropping `...step.ctx` is valid only when you intentionally replace the
context. In advanced fragments, accidental context loss is the most common
source of type errors and runtime surprises.

## Build wrapper fragments

A wrapper fragment owns a larger shape than "prepend these tasks." It can run
company-managed setup before repo setup and company-managed checks after repo
setup.

The built-in `withFreestyleCompanyBase(...)` follows this shape:

```text
with-freestyle-company-base
  freestyle-company-base              global shared base
  repo-specific setup                 local project setup
  freestyle-company-base-auth-check   local uncached health check
```

The wrapped repo setup receives a base context:

```ts
import {
  withFreestyleCompanyBase,
  type FreestyleCompanyBaseFragmentContext,
} from "@rigkit/fragments";
import { freestyle } from "@rigkit/provider-freestyle";

const freestyleProvider = freestyle.provider();

const projectSetup = app
  .sequence<FreestyleCompanyBaseFragmentContext>("project-setup")
  .addProvider("freestyle", freestyleProvider)
  .task("prepare-project-image", async ({ providers, step }) => {
    const { vm, vmId } = await providers.freestyle.client.vms.create({
      snapshotId: step.ctx.snapshotId,
      idleTimeoutSeconds: step.ctx.freestyleCompanyBase.idleTimeoutSeconds,
      logger: console.log,
    });

    try {
      await vm.exec("mkdir -p /workspace/app");
      const snapshot = await vm.snapshot();
      return {
        ctx: {
          ...step.ctx,
          snapshotId: snapshot.snapshotId,
          project: {
            path: "/workspace/app",
          },
        },
      };
    } finally {
      await providers.freestyle.client.vms.delete({ vmId });
    }
  });

export const project = app
  .sequence("project")
  .add(withFreestyleCompanyBase(projectSetup));
```

The wrapped setup must preserve `freestyleCompanyBase` in its returned context.
The fragment types enforce that contract so the trailing auth check can still
read the base metadata after repo-specific setup adds fields.

## Invalidate shared auth from a later check

Wrapper fragments can run a local uncached check after repo setup and invalidate
an earlier global task if credentials are stale:

```ts
const authCheck = sequence<BaseProviderMap, BaseContext>("base-auth-check")
  .local()
  .task("check-auth", { cacheTTL: 0 }, async ({ step }) => {
    const ok = await checkAuth(step.ctx.snapshotId);
    if (!ok) {
      return step.invalidate("github-auth");
    }
    return { ctx: step.ctx };
  });
```

This pattern is useful when:

- the expensive base should be global;
- a credential check must run every apply;
- stale credentials should rebuild only the auth task and dependent work;
- each repo should consume the same simple wrapper without copying the full
  workflow shape.

## Use output types from fragments

Use `WorkflowNodeOutput<typeof fragment>` when a later fragment needs the
previous fragment's output type.

```ts
import {
  sequence,
  type WorkflowNodeOutput,
} from "@rigkit/sdk";
import { baseDependencies } from "./base-dependencies";

type BaseContext = WorkflowNodeOutput<typeof baseDependencies>;

const repoSetup = sequence<WorkflowProviderMap, BaseContext>("repo")
  .task("clone", async ({ step }) => ({
    ctx: {
      ...step.ctx,
      repoPath: "/workspace/app",
    },
  }));
```

This keeps helper modules strongly typed without duplicating context shapes by
hand.

## Fragment guidelines

- Return durable JSON context, not live provider objects.
- Keep cache-affecting options in `.configure(...)`.
- Use `.global()` only when sharing the result is intentional.
- Preserve incoming context unless replacing it is part of the design.
- Put health checks near the resource they validate.
- Use `cacheTTL: 0` for checks that must run on every apply.
- Be explicit about credentials when snapshots or global fragments may contain
  authenticated state.
